--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ jdk:
   - oraclejdk7
   - oraclejdk8 
 
+after_success:
+  - mvn clean test jacoco:report org.eluder.coveralls:coveralls-maven-plugin:jacoco -DsourceEncoding=UTF-8
